deployment/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: gcr.io/distributed-system-final/backend-app:v3
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"    # 請求 100 毫核的 CPU 資源
          limits:
            cpu: "500m"    # 限制最多使用 500 毫核的 CPU 資源
